fix: no overlapping between content and header

--- a/website/src/styles/Progress.css
+++ b/website/src/styles/Progress.css
@@ -8,6 +8,6 @@
 
 .session-count {
   position: absolute;
-  top: 6rem;
+  top: 5.5rem;
   right: 2rem;
 }
